[package]
name = "sapphyre_tools"
version = "0.9.2"
edition = "2021"
include = ["/src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sapphyre_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
bio = "*"
itertools = "0.10.5"
serde_json = {version = "1.0.95"}
serde = "1.0.159"
gzip-header = "1.0.0"
crc32fast = "1.3.2"
tempfile = "3.8.0"
fastx = "0.2.0"
rand = { version = "0.8.5" }
rand_chacha = "0.3.1"
crc = "3.0.1"
deflate = {version="1.0.0", features =["gzip", "gzip-header"]}
gzip = { version="0.1.2" }
meminterval = "0.4.1"
anyhow = "1"
crossbeam-channel = "0.5"
hashbrown = "0.14"
ahash = "0.8"
seq_io = "0.3"
rayon = "1.10"
flate2 = "1"


[profile.dev]
opt-level = 3

