[package]
name = "sapphyre_tools"
version = "0.10.20"
edition = "2021"
include = ["/src", "/python", "/pyproject.toml", "/README.md", "/LICENSE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sapphyre_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
bio = "*"
itertools = "0.10.5"
tempfile = "3.8.0"
fastx = "0.2.0"
meminterval = "0.4.1"
anyhow = "1"
ahash = "0.8"
seq_io = "0.3"
flate2 = "1"
rocksdb = { version = "0.22", default-features = false, features = ["zstd"] }


[profile.dev]
opt-level = 3

