[package]
name = "sapphyre_tools"
version = "0.11.2"
edition = "2021"
include = ["/src", "/python", "/pyproject.toml", "/README.md", "/LICENSE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sapphyre_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
bio = "3"
itertools = "0.14"
tempfile = "3.27"
fastx = "0.6"
meminterval = "0.4.2"
anyhow = "1"
ahash = "0.8"
seq_io = "0.3"
flate2 = "1"
rocksdb = { version = "0.24", default-features = false, features = ["zstd"] }


[profile.dev]
opt-level = 3

