[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "sapphyre_tools"
version = "0.9.3"
requires-python = ">=3.8"
authors = [
    {email = "mvalentine65@gmail.com"},
    {name = "Michael Valentine"}
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "Python wrapper",
    "high-performance",
]
